<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="@dimen/_4dp"
    app:cardCornerRadius="@dimen/_10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:text="@string/txt_textview"
            tools:ignore="MissingConstraints"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25"/>
        <View
            android:id="@+id/line1"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginBottom="@dimen/_16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@id/guideline"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75"/>
        <View
            android:id="@+id/line2"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginBottom="@dimen/_16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/txt_positif"
            app:layout_constraintEnd_toStartOf="@id/line1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_sembuh"
            app:layout_constraintEnd_toStartOf="@id/line2"
            app:layout_constraintStart_toEndOf="@id/line1"
            app:layout_constraintTop_toTopOf="@id/textView7"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_meninggal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/line2"
            app:layout_constraintTop_toTopOf="@id/textView8"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvPositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8000"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold"
            android:textColor="#D31717"
            app:layout_constraintBottom_toBottomOf="@id/line1"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@id/textView7"
            app:layout_constraintTop_toTopOf="@id/line1"/>

        <TextView
            android:id="@+id/tvSembuh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_3130"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold"
            android:textColor="#4CAF50"
            app:layout_constraintBottom_toBottomOf="@id/tvPositive"
            app:layout_constraintEnd_toEndOf="@id/textView8"
            app:layout_constraintStart_toStartOf="@id/textView8"
            app:layout_constraintTop_toTopOf="@id/tvPositive"/>

        <TextView
            android:id="@+id/tvMeninggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_529"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold"
            android:textColor="#FF9800"
            app:layout_constraintBottom_toBottomOf="@id/tvSembuh"
            app:layout_constraintEnd_toEndOf="@id/textView9"
            app:layout_constraintStart_toStartOf="@id/textView9"
            app:layout_constraintTop_toTopOf="@id/tvSembuh"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>