<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_65dp"
        android:orientation="horizontal"
        android:background="#212B46"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="@dimen/_80dp"
            android:layout_height="@dimen/_45dp"
            android:src="@drawable/satgas_logo"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/txt_todo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/txt_satgas_covid_19"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        android:background="@drawable/back"
        android:orientation="vertical">

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout4"
        tools:ignore="NotSibling" >

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/txt_nama"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cdv2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30dp"
            app:cardCornerRadius="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/txt_todo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10dp"
                    android:text="@string/txt_lokasi"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_16sp"
                    android:textStyle="italic"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_update_kasus_corona"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginStart="@dimen/_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cdv2"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/tv12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_desc"
            android:textSize="@dimen/_16sp"
            android:textStyle="normal"
            android:layout_marginTop="5dp"
            android:layout_marginStart="@dimen/_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf= "@id/tv11"
            android:textColor="@android:color/white"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cdvPositif"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginStart="@dimen/_30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv12"
            app:cardCornerRadius="@dimen/_10dp"
            app:cardBackgroundColor="#D31717"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="@string/txt_positif"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:id="@+id/tvPositive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginStart="@dimen/_10dp"
                    android:textSize="@dimen/_24sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView1"
                    android:text="Positive"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cdvSembuh"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginStart="@dimen/_30dp"
            app:layout_constraintStart_toEndOf="@id/cdvPositif"
            app:layout_constraintTop_toBottomOf="@id/tv12"
            app:cardCornerRadius="@dimen/_10dp"
            app:cardBackgroundColor="#43EC05"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="@string/txt_sembuh"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:id="@+id/tvSembuh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginStart="@dimen/_10dp"
                    android:textSize="@dimen/_24sp"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView2"
                    android:text="@string/txt_sembuh"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cdvDirawat"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginStart="@dimen/_30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cdvPositif"
            app:cardCornerRadius="@dimen/_10dp"
            app:cardBackgroundColor="#1670B5"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="@string/txt_dirawat"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:id="@+id/tvDirawat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginStart="@dimen/_10dp"
                    android:textSize="@dimen/_24sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView3"
                    android:text="Dirawat"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cdvMeninggal"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginStart="@dimen/_30dp"
            app:layout_constraintStart_toEndOf="@id/cdvDirawat"
            app:layout_constraintTop_toBottomOf="@id/cdvSembuh"
            app:cardCornerRadius="@dimen/_10dp"
            app:cardBackgroundColor="#FF9800"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:text="@string/txt_meninggal"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:id="@+id/tvMeninggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginStart="@dimen/_10dp"
                    android:textSize="@dimen/_24sp"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView4"
                    android:text="Meninggal"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvkedua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_update_per_provinsi"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cdvDirawat"
            android:textColor="@android:color/black"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cdv3"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginTop="@dimen/_10dp"
            app:cardCornerRadius="@dimen/_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvkedua">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@drawable/coronammaps">

                <Button
                    android:id="@+id/btnProvince"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_80dp"
                    android:background="@drawable/bg_button"
                    android:drawableLeft="@drawable/ic_location"
                    android:text="Lihat Data Provinsi"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textAllCaps="false"
                    tools:ignore="RtlCompat" />



            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottoNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#212B46"
        app:itemTextColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>